force-app/main/default/objects/Pattern_Matching__mdt/fields/Common_Body_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Common_Body_Patterns__c</fullName>
    <label>Common Body Patterns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>