force-app/main/default/objects/Pattern_Matching__mdt/fields/Email_Domains__c.field-meta.xml
<CustomField>
    <fullName>Email_Domains__c</fullName>
    <description>Email domains that the pattern should be applicable for</description>
    <inlineHelpText>Enter the domain names separated by semi-colon</inlineHelpText>
    <label>Email Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>