force-app/main/default/objects/Pattern_Matching__mdt/fields/Ignored_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Ignored_Subjects__c</fullName>
    <label>Ignored Subjects</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>