force-app/main/default/objects/Pattern_Matching__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Label of the record type for which the record should be applied.</description>
    <inlineHelpText>Select the record type for which this record should be applicable</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement</fullName>
                <default>true</default>
                <label>Engagement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>