force-app/main/default/objects/Pattern_Matching__mdt/fields/Remove_From_End__c.field-meta.xml
<CustomField>
    <fullName>Remove_From_End__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tells if the special character needs to be removed from the end of subject.</description>
    <inlineHelpText>This field tells if the special character needs to be removed from the end of subject.</inlineHelpText>
    <label>Remove From End?</label>
    <type>Checkbox</type>
</CustomField>