force-app/main/default/objects/Pattern_Matching__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regex</fullName>
            </value>
            <value>
                <fullName>Prefix</fullName>
            </value>
            <value>
                <fullName>Special_Character</fullName>
                <label>Special Character</label>
            </value>
            <value>
                <fullName>Non_Actionable_Subject</fullName>
                <label>Non Actionable Subject</label>
            </value>
            <value>
                <fullName>Subject_Pattern</fullName>
                <label>Subject Pattern</label>
            </value>
            <value>
                <fullName>Body_Pattern</fullName>
                <label>Body Pattern</label>
            </value>
            <value>
                <fullName>Ignore_From_Address</fullName>
                <label>Ignore From Address</label>
            </value>
            <value>
                <fullName>Body_Regex</fullName>
                <label>Body Regex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>